# sonarqube-demo-python

./: .gitignore  README.md  init_projectstructure.py  sonar-project.properties
.github/workflows/: sonarcloud.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes_admin.py  routes_chat.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py  neo4j_driver.py
backend/app/models/: drug_schema.py
backend/app/services/: graph_service.py  llm_service.py  rag_service.py
backend/app/tests/: test_api.py  test_rag.py
backend/app/utils/: embeddings.py  feedback.py  preprocess.py
frontend/: app.py  pyproject.toml
tests/: test_calculator.py
